fix navigation on mobile

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -121,8 +121,12 @@
     padding: 40px 30px 30px;
     transition: right 0.5s cubic-bezier(0.7, 0.4, 0, 1);
     background: $white;
+
     &.is-open {
       right: 0;
+      .nav__list .nav__item .nav__link {
+        display: block;
+      }
     }
 
     .nav-icon__close {
